grammar.js
    module: $ => seq(
      optional($.module_doc_comment),
      optional($.moduleTk),
      optional($.prelude),
      repeat($.import),
      repeat($._command),
    ),

    prelude:  _ => 'prelude',

    import: $ => seq(
      optional($.public),
      optional($.meta),
      'import',
      optional($.all),
      field('name', $.identifier),
    ),

    _command: $ => choice(
      $.check,
      $.eval,
      $.print,
      $.reduce,
      $.namespace,
      $.section,
      $.public_section,
      $.end,
      $.variable,
      $.universe,
      $.open,
      $.export,
      $.attribute_cmd,
      $.initialize,
      $.set_option,
      $.deriving_cmd,
      $.assert_cmd,
      $.decl_doc_cmd,
      $.grind_pattern_cmd,
      $.alias_cmd,
      $.notation_decl_cmd,
      $.syntax_cmd,
      $.macro_cmd,
      $.macro_rules_cmd,
      $.elab_rules_cmd,
      $.register_cmd,
      $.unif_hint_cmd,
      $.declare_syntax_cat_cmd,
      $.mutual,
      $.declaration,
    ),

    /* `mutual … end` groups mutually-recursive declarations. Like
       `namespace`/`section`/`end`, it is modeled as a flat marker
       rather than a nesting block: the inner declarations parse as
       siblings and the closing `end` is the ordinary `end` command.
       Pairing is left to tooling, consistent with the rest of the
       grammar (and avoids an `end`-disambiguation conflict). */
    universe: $ => seq(
      choice('universe', 'universes'),
      repeat1(field('name', $.identifier)),
    ),

    open: $ => prec.right(seq(
      'open',
      $._open_decl,
      optional(seq('in', field('body', $._command))),
    )),
    _open_decl: $ => choice(
      seq(
        field('namespace', $.identifier),
        '(',
        repeat1(field('only', $.identifier)),
        ')',
      ),
      seq('scoped', repeat1(field('scoped', $.identifier))),
      repeat1(field('namespace', $.identifier)),
    ),

    export: $ => seq(
      'export',
      field('namespace', $.identifier),
      '(',
      repeat1(field('only', $.identifier)),
      ')',
    ),

    /* ----- declarations ------------------------------------------------- */

    _decl_universes: $ => seq(
      token.immediate('.{'),
      sep1(field('level', choice($.identifier, $.num_lit)), ','),
      '}',
    ),

    constant: $ => seq(
      'constant',
      field('name', $.identifier),
      optional($._decl_universes),
      optional($._binders),
      $._type_spec,
      optional($._decl_val),
    ),

    _decl_val: $ => choice(
      seq(field('body', seq(':=', $._term)), optional($.where_decls)),
      seq(repeat1($.match_alt), optional($.where_decls)),
      seq($.where_struct, optional($.where_decls)),
    ),
    _type_spec: $ => field('type', seq(':', $._term)),

    /* `where f := v g := w …` body of a `def name : T where …` —
       declares a value of a structure/instance type by field. The
       indented form uses scanner-emitted INDENT/NEWLINE/DEDENT so a
       field whose RHS is a multi-line term doesn't accidentally
       swallow the next field's name. The body is optional: an empty
       `where` clause is legal when the structure has no fields.
       `where ...` is Lean's "fill all required fields with sorry"
       elision marker.

       The same `where` clause also introduces auxiliary helper
       definitions on a regular `def`/`theorem`:
         def f x := body
         where
           helper := …
           another | pat => …
       A `where_item` covers both forms: a struct field
       (`name [binders] := value`) or a function-style helper
       (`name | pat => … | pat => …`). */
    _binders: $ => alias(repeat1($._binder), $.binders),
    identifier: $ => choice($._plain_ident, $._scanned_ident),
    _plain_ident: _ => /[a-zA-Z_][a-zA-Z_0-9'!?]*/,
  },
});
